--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<hello name="{{ name }}"></hello>
+<h2>Custom Uppercase Directive</h2>
 <!---DIRECTIVE SAME AS NGIF-->
 <div *isAllowed="showMe">I am Visible</div>
 <button type="button" (click)="showMe = !showMe">showMe</button>
